# cubish

./: CMakeLists.txt  Cube.cpp  Cube.h  Identifier.cpp  Identifier.h  ParseTree.cpp  ParseTree.h  ParseTreeNodeBool_Interface.h  ParseTreeNodeInt_Interface.h  ParseTreeNode_Interface.h  artnet_client.c  artnet_client.h  lexer.l  parser.y  readme.md
artnet/: Art-Net.h  RDM.h
example/: portal.cub  testfile
parseTree/: Anzeigen.cpp  Anzeigen.h  ErstelleBox.cpp  ErstelleBox.h  ErstelleWuerfel.cpp  ErstelleWuerfel.h  ErstelleZahl.cpp  ErstelleZahl.h  FaerbeAuf.cpp  FaerbeAuf.h  FaerbeUm.cpp  FaerbeUm.h  Geteilt.cpp  Geteilt.h  Gleich.cpp  Gleich.h  Groesser.cpp  Groesser.h  Integer.cpp  Integer.h  IntegerIdentifier.cpp  IntegerIdentifier.h  Kleiner.cpp  Kleiner.h  Mal.cpp  Mal.h  Minus.cpp  Minus.h  Modulo.cpp  Modulo.h  Plus.cpp  Plus.h  ProgramBlock.cpp  ProgramBlock.h  SetzeIntegerIdentifier.cpp  SetzeIntegerIdentifier.h  VerschiebeAuf.cpp  VerschiebeAuf.h  VerschiebeUm.cpp  VerschiebeUm.h  (+6 more)
